--- a/contents/docs/introduction/setup/index.mdx
+++ b/contents/docs/introduction/setup/index.mdx
@@ -64,7 +64,7 @@ export const totopscroll = true       // Control to enable/disable scroll-to-top
 If your MDX files are hosted on GitHub, you can configure the project to load documents directly from there. This option can be useful for syncing documentation updates directly with your repository.
 
 ```tsx showLineNumbers
-export const loadfromgithub = false   // Set to true to load your MDX documents directly from GitHub
+export const loadfromgithub = true   // Set to true to load your MDX documents directly from GitHub
 ```
 
 ## Project Structure
